--- a/config/VM1/ks.cfg
+++ b/config/VM1/ks.cfg
@@ -81,7 +81,7 @@ echo "The interface name of this system is $interface, Configuring . . . ."
 sed -i -e 's/dhcp/static/g' /etc/sysconfig/network-scripts/ifcfg-$interface
 sed -i -e 's/ONBOOT=no/ONBOOT=yes/g' /etc/sysconfig/network-scripts/ifcfg-$interface
 echo -e "IPADDR=192.168.220.128\nNETMASK=255.255.255.0\nGATEWAY=192.168.220.1\n" >> /etc/sysconfig/network-scripts/ifcfg-$interface
-echo -e "nameserver 192.168.220.128\nnameserver 192.168.5.1" >> /etc/resolv.conf
+echo -e "nameserver 192.168.220.128\nnameserver 8.8.8.8" >> /etc/resolv.conf
 echo  "The Interface Has Been Configured . . ."
 
 # Disable Dhclient to update resolv.conf
@@ -90,11 +90,10 @@ chattr +i /etc/resolv.conf
 # Enabling the port 53,80
 echo "Enabling the port 53,80,3306 on firewall"
 firewall-offline-cmd --port=80:tcp
-firewall-offline-cmd --port=53:udp
 firewall-offline-cmd --port=21:tcp
 firewall-offline-cmd --port=20:tcp
-firewall-offline-cmd --port=40000:tcp # For data transfer with filezilla
-firewall-offline-cmd --service=glusterfs
+firewall-offline-cmd --port=40000:tcp
+firewall-offline-cmd --port=53:udp
 
 # Fixing the SSH to not use the DNS reverse lookup
 echo "Fixing the slow ssh login prompt"
@@ -108,7 +107,6 @@ find /root/semanage/ -type f -name "*.rpm" -exec rpm -Uvh {} +
 echo "Installing DNS server"
 find /root/dns/ -type f -name "*.rpm" -exec rpm -Uvh {} +
 
-
 # Configuring DNS Server
 cp -f /opt/utils/named.conf /etc/named.conf
 cp -f /opt/utils/db.* /var/named/data/
@@ -117,8 +115,9 @@ semanage fcontext -a -t named_zone_t /var/named/data/db.ku
 semanage fcontext -a -t named_zone_t /var/named/data/db.220.168.192
 setsebool -P named_write_master_zones=1
 
-# Installing GlusterFS
+# Installing GlusterFS and configuring firewall 
 find /root/glusterfs/ -type f -name "*.rpm" -exec rpm -Uvh {} +
+firewall-offline-cmd --add-service=glusterfs
 
 #Installing MariaDB
 find /root/mariadb/ -type f -name "*.rpm" -exec rpm -Uvh {} + 
@@ -128,11 +127,14 @@ find /root/vsftpd -type f -name "*.rpm" -exec rpm -Uvh {} +
 
 # Installing Varnish cache server 
 find /root/varnish -type f -name "*.rpm" -exec rpm -Uvh --nodeps {} + 
-
+# Configuring varnish
+sed -i -e 's/6081/80/g' /usr/lib/systemd/system/varnish.service
+cp -f /opt/utils/default.vcl /etc/varnish/default.vcl
 
 # Add GlusterFS volume create and start service
 cp -f /opt/blibli/glusterservice.service /etc/systemd/system/
 cp -f /opt/blibli/*.mount /etc/systemd/system/
+cp -f /opt/blibli/createAdmin.service /etc/systemd/system/
 # Configuring VSftpd
 touch /etc/vsftpd.userlist
 cp -f /opt/utils/vsftpd.conf /etc/vsftpd/vsftpd.conf
@@ -142,6 +144,10 @@ semanage boolean -m ftpd_full_access --on
 # Create Script Folder
 mkdir /opt/script/
 cp -RTf /opt/utils/script/ /opt/script/
+chmod 755 /opt/script/*.sh
+
+# give executeable permission for script createAdmin.sh
+chmod 755 /opt/blibli/createAdmin.sh
 
 # Enable the Nginx and DNS service
 echo "Enable Nginx , named"
@@ -155,6 +161,7 @@ systemctl enable postfix
 systemctl enable glusterservice
 systemctl enable home.mount
 systemctl enable opt-nginxconf.mount
+systemctl enable createAdmin
 # Speed up the grub timeout 
 echo "SpeedingUp the grub timeout"
 /bin/sed -i -e 's/5/0/g' /etc/default/grub
