--- a/config/VM3/ks3.cfg
+++ b/config/VM3/ks3.cfg
@@ -73,7 +73,7 @@ echo "The interface name of this system is $interface, Configuring . . . ."
 sed -i -e 's/dhcp/static/g' /etc/sysconfig/network-scripts/ifcfg-$interface
 sed -i -e 's/ONBOOT=no/ONBOOT=yes/g' /etc/sysconfig/network-scripts/ifcfg-$interface
 echo -e "IPADDR=192.168.220.130\nNETMASK=255.255.255.0\nGATEWAY=192.168.220.1\n" >> /etc/sysconfig/network-scripts/ifcfg-$interface
-echo -e "nameserver 192.168.220.128\nameserver 192.168.5.1" >> /etc/resolv.conf
+echo -e "nameserver 192.168.220.128\nnameserver 8.8.8.8" >> /etc/resolv.conf
 echo  "The Interface Has Been Configured . . ."
 
 # Disable Dhclient to update resolv.conf
@@ -85,6 +85,14 @@ find /root/semanage/ -type f -name "*.rpm" -exec rpm -Uvh {} +
 
 #Installing Web n App server
 find /root/webnapp/ -type f -name "*.rpm" -exec rpm -Uvh  --nodeps {} +
+
+#Configuring Web n App server
+cp -f /opt/utils/nginx.conf /etc/nginx/
+cp -f /opt/utils/www.conf /etc/php-fpm.d/
+cp -f /opt/utils/nginx.service /usr/systemd/system/
+
+# Configurin SELinux context with compiled module for nginx
+semodule -i /opt/utils/nginx.pp
 
 # Create User nodeexporter
 useradd -m -s /bin/bash nodeexporter
@@ -100,19 +108,20 @@ echo "UseDNS no" >> /etc/ssh/sshd_config
 find /root/glusterfs/client/ -type f -name "*.rpm" -exec rpm -Uvh {} +
 
 # Copy mount service VM 2 & 3
-cp -f /opt/blibli/var-www-html.mount /etc/systemd/system
+cp -f /opt/blibli/usr-share-nginx-html.mount /etc/systemd/system
 cp -f /opt/blibli/etc-nginx-conf.d.mount /etc/systemd/system
 
-# Enable the GLusterd, httpd , node-exporter
+# Enable the GLusterd, httpd , node-exporter , mount service
 echo "Enable Web Server , App Server and node-exporter"
 systemctl enable nodeexporter
 systemctl enable nginx
 systemctl enable php-fpm
-systemctl enable var-www-html.mount
+systemctl enable usr-share-nginx-html.mount
 systemctl enable etc-nginx-conf.d.mount
 
 # Enabling the port 9000 , 9100 , 80
-echo "Enabling the port 9000 , 9100 , 80  on firewall"
+echo "Enabling the port 9100 , 80  on firewall"
+
 firewall-offline-cmd --port=9100:tcp
 firewall-offline-cmd --port=80:tcp
 
@@ -124,7 +133,8 @@ echo "SpeedingUp the grub timeout"
 echo "umount directory and delete it !"
 umount /root/webnapp
 umount /root/semanage
-rm -rf /root/webnapp /opt/blibli /root/semanage
+umount /opt/utils
+rm -rf /root/webnapp /opt/blibli /root/semanage /opt/utils
 
 # Updating new configuration file
 echo "Updating new configuration file"
