--- a/config/VM1/ks.cfg
+++ b/config/VM1/ks.cfg
@@ -59,8 +59,9 @@ mkdir -p /mnt/sysimage/root/mariadb
 mkdir -p /mnt/sysimage/root/vsftpd
 mkdir -p /mnt/sysimage/root/varnish
 mkdir -p /mnt/sysimage/opt/blibli
+mkdir -p /mnt/sysimage/root/expect
 # Mount and Copy package from iso to the folder has been create
-#cp /mnt/install/repo/Packages/nginx-1.14.0-1.el7_4.ngx.x86_64.rpm /mnt/sysimage/root/nginx.rpm
+
 mount --bind /mnt/install/repo/Packages/dns /mnt/sysimage/root/dns
 mount --bind /mnt/install/repo/Packages/utils /mnt/sysimage/opt/utils
 mount --bind /mnt/install/repo/Packages/semanage /mnt/sysimage/root/semanage
@@ -68,9 +69,9 @@ mount --bind /mnt/install/repo/Packages/glusterfs /mnt/sysimage/root/glusterfs
 mount --bind /mnt/install/repo/Packages/mariadb /mnt/sysimage/root/mariadb
 mount --bind /mnt/install/repo/Packages/vsftpd /mnt/sysimage/root/vsftpd
 mount --bind /mnt/install/repo/Packages/varnish /mnt/sysimage/root/varnish
+mount --bind /mnt/install/repo/Packages/expect /mnt/sysimage/root/expect
 cp -RTf /mnt/install/repo/Packages/blibli /mnt/sysimage/opt/blibli
-# Give executeable permission to script needed by custom service
-chmod 755 /mnt/sysimage/opt/blibli/gluster.sh
+
 %end
 
 %post --log=/root/ks-post.log --interpreter=/bin/bash
@@ -131,10 +132,16 @@ find /root/varnish -type f -name "*.rpm" -exec rpm -Uvh --nodeps {} +
 sed -i -e 's/6081/80/g' /usr/lib/systemd/system/varnish.service
 cp -f /opt/utils/default.vcl /etc/varnish/default.vcl
 
+
+# Installing expect package
+find /root/expect -type f -name "*.rpm" -exec rpm -ivh {} + 
+
 # Add GlusterFS volume create and start service
 cp -f /opt/blibli/glusterservice.service /etc/systemd/system/
 cp -f /opt/blibli/*.mount /etc/systemd/system/
 cp -f /opt/blibli/createAdmin.service /etc/systemd/system/
+cp -f /opt/blibli/mysqlSecure.service /etc/systemd/system/
+
 # Configuring VSftpd
 touch /etc/vsftpd.userlist
 cp -f /opt/utils/vsftpd.conf /etc/vsftpd/vsftpd.conf
@@ -146,7 +153,9 @@ mkdir /opt/script/
 cp -RTf /opt/utils/script/ /opt/script/
 chmod 755 /opt/script/*.sh
 
-# give executeable permission for script createAdmin.sh
+# Give executeable permission to script needed by custom service
+chmod 755 /opt/blibli/gluster.sh
+chmod 755 /opt/blibli/mysqlSecure.sh
 chmod 755 /opt/blibli/createAdmin.sh
 
 # Enable the Nginx and DNS service
@@ -162,6 +171,8 @@ systemctl enable glusterservice
 systemctl enable home.mount
 systemctl enable opt-nginxconf.mount
 systemctl enable createAdmin
+systemctl enable mysqlSecure
+
 # Speed up the grub timeout 
 echo "SpeedingUp the grub timeout"
 /bin/sed -i -e 's/5/0/g' /etc/default/grub
@@ -175,8 +186,8 @@ umount /root/glusterfs
 umount /root/vsftpd
 umount /root/varnish
 umount /root/mariadb
-
-rm -rf /root/dns  /opt/utils /root/semanage /root/glusterfs /root/vsftpd /root/varnish /root/mariadb
+umount /root/expect
+rm -rf /root/dns  /opt/utils /root/semanage /root/glusterfs /root/vsftpd /root/varnish /root/mariadb /root/expect
 
 # Updating new configuration file
 echo "Updating new configuration file"
