Add installation for postfix ,and configure it

--- a/config/VM1/ks.cfg
+++ b/config/VM1/ks.cfg
@@ -60,6 +60,7 @@ mkdir -p /mnt/sysimage/root/vsftpd
 mkdir -p /mnt/sysimage/root/varnish
 mkdir -p /mnt/sysimage/opt/blibli
 mkdir -p /mnt/sysimage/root/expect
+mkdir -p /mnt/sysimage/root/mailla
 # Mount and Copy package from iso to the folder has been create
 
 mount --bind /mnt/install/repo/Packages/dns /mnt/sysimage/root/dns
@@ -70,6 +71,7 @@ mount --bind /mnt/install/repo/Packages/mariadb /mnt/sysimage/root/mariadb
 mount --bind /mnt/install/repo/Packages/vsftpd /mnt/sysimage/root/vsftpd
 mount --bind /mnt/install/repo/Packages/varnish /mnt/sysimage/root/varnish
 mount --bind /mnt/install/repo/Packages/expect /mnt/sysimage/root/expect
+mount --bind /mnt/install/repo/Packages/mailla /mnt/sysimage/root/mailla
 cp -RTf /mnt/install/repo/Packages/blibli /mnt/sysimage/opt/blibli
 
 %end
@@ -158,8 +160,16 @@ chmod 755 /opt/blibli/gluster.sh
 chmod 755 /opt/blibli/mysqlSecure.sh
 chmod 755 /opt/blibli/createAdmin.sh
 
+
+# Installing some package to make send only postfix work
+find /root/mailla -type f -name "*.rpm" -exec rpm -Uvh {} +
+cp -f /opt/utils/main.cf /etc/postfix/
+mkdir -p /etc/postfix/sasl
+cp -f /opt/utils/sasl_passwd.db /etc/postfix/sasl/
+
+
 # Enable the Nginx and DNS service
-echo "Enable Nginx , named"
+echo "Enable lot of service"
 #systemctl enable nginx
 systemctl enable named
 systemctl enable vsftpd
@@ -187,7 +197,8 @@ umount /root/vsftpd
 umount /root/varnish
 umount /root/mariadb
 umount /root/expect
-rm -rf /root/dns  /opt/utils /root/semanage /root/glusterfs /root/vsftpd /root/varnish /root/mariadb /root/expect
+umount /root/mailla
+rm -rf /root/dns  /opt/utils /root/semanage /root/glusterfs /root/vsftpd /root/varnish /root/mariadb /root/expect /root/mailla
 
 # Updating new configuration file
 echo "Updating new configuration file"
