--- a/config/VM2/nginx.conf
+++ b/config/VM2/nginx.conf
@@ -31,29 +31,59 @@ http {
     # for more information.
     include /etc/nginx/conf.d/*.conf;
 
-	server {
-    		listen       80;
-   		 server_name  lordhostiner.ku;
+    server {
+        listen       80 default_server;
+        listen       [::]:80 default_server;
+        server_name  _;
+        root         /usr/share/nginx/html;
 
-    		location / {
-        		root   /var/www/html/registar;
-       	 		index index.php  index.html index.htm;
-   		 }	
+        # Load configuration files for the default server block.
+        include /etc/nginx/default.d/*.conf;
 
-    		error_page   500 502 503 504  /50x.html;
-   		 location = /50x.html {
-    		    root   /usr/share/nginx/html;
-   		 }
+        location / {
+        }
 
-   		
-		 location ~ [^/]\.php(/|$) {
-   			 fastcgi_split_path_info  ^(.+\.php)(/.+)$;
-   			 fastcgi_index            index.php;
-   			 fastcgi_pass             unix:/var/run/php-fpm.sock;
-   			 include                  fastcgi_params;
-   			 fastcgi_param   PATH_INFO       $fastcgi_path_info;
-   			 fastcgi_param   SCRIPT_FILENAME /var/www/html/registar$fastcgi_script_name;
-			}
-		}
-	}
+        error_page 404 /404.html;
+            location = /40x.html {
+        }
 
+        error_page 500 502 503 504 /50x.html;
+            location = /50x.html {
+        }
+	
+      location = /stub_status {
+       stub_status;
+      }
+    }
+
+# Settings for a TLS enabled server.
+#
+#    server {
+#        listen       443 ssl http2 default_server;
+#        listen       [::]:443 ssl http2 default_server;
+#        server_name  _;
+#        root         /usr/share/nginx/html;
+#
+#        ssl_certificate "/etc/pki/nginx/server.crt";
+#        ssl_certificate_key "/etc/pki/nginx/private/server.key";
+#        ssl_session_cache shared:SSL:1m;
+#        ssl_session_timeout  10m;
+#        ssl_ciphers HIGH:!aNULL:!MD5;
+#        ssl_prefer_server_ciphers on;
+#
+#        # Load configuration files for the default server block.
+#        include /etc/nginx/default.d/*.conf;
+#
+#        location / {
+#        }
+#
+#        error_page 404 /404.html;
+#            location = /40x.html {
+#        }
+#
+#        error_page 500 502 503 504 /50x.html;
+#            location = /50x.html {
+#        }
+#    }
+
+}
