Update some configuration

--- a/config/VM3/ks3.cfg
+++ b/config/VM3/ks3.cfg
@@ -11,7 +11,7 @@ keyboard --vckeymap=us --xlayouts='us'
 lang en_US.UTF-8
 
 # Network information
-network  --hostname=localhost.localdomain
+network  --hostname=server3.localdomain
 
 # Root password
 rootpw --iscrypted $6$b/t5PbHQZywPEfpr$8s8CTsEhDjTWrAypN2HFRl.A65y9bihpmnIqymKaJDQXr.cWrIw6H.8TwNtW/ZEdc4DP0YyGdKsgd7QpI3toQ0
@@ -59,7 +59,12 @@ mkdir -p /mnt/sysimage/root/glusterfs
 # Mount and Copy package from iso to the folder has been create
 mount --bind /mnt/install/repo/Packages/webnapp/ /mnt/sysimage/root/webnapp/
 cp -R /mnt/install/repo/Packages/node_exporter /mnt/sysimage/root/node_exporter
+cp -R /mnt/install/repo/Packages/nginx_exporter /mnt/sysimage/root/nginx_exporter
+cp -R /mnt/install/repo/Packages/php-fpm_exporter /mnt/sysimage/root/php-fpm_exporter
+cp -R /mnt/install/repo/Packages/mysqld_exporter /mnt/sysimage/root/mysqld_exporter
 cp -R /mnt/install/repo/Packages/blibli /mnt/sysimage/opt/blibli
+
+
 mount --bind /mnt/install/repo/Packages/semanage /mnt/sysimage/root/semanage
 mount --bind /mnt/install/repo/Packages/utils /mnt/sysimage/opt/utils
 mount --bind /mnt/install/repo/Packages/glusterfs /mnt/sysimage/root/glusterfs
@@ -87,17 +92,27 @@ find /root/semanage/ -type f -name "*.rpm" -exec rpm -Uvh {} +
 find /root/webnapp/ -type f -name "*.rpm" -exec rpm -Uvh  --nodeps {} +
 
 #Configuring Web n App server
-cp -f /opt/utils/nginx.conf /etc/nginx/
+cp -f /opt/utils/nginx.conf /etc/nginx/nginx.conf
 cp -f /opt/utils/www.conf /etc/php-fpm.d/
 cp -f /opt/utils/nginx.service /usr/systemd/system/
 
 # Configurin SELinux context with compiled module for nginx
 semodule -i /opt/utils/nginx.pp
 
-# Create User nodeexporter
-useradd -m -s /bin/bash nodeexporter
-mv /root/node_exporter /home/nodeexporter/
+# Creating folder for Nginx restart service
+mkdir -p /root/python/
+cp -f /opt/utils/script/restartNginx.py /root/python
+cp -f /opt/blibli/restartNginx.service /etc/systemd/system
+
+# Create User prometheus
+useradd -m -s /bin/bash prometheus
+mv /root/node_exporter /home/prometheus/
+mv /root/nginx_exporter /home/prometheus/
+mv /root/php-fpm_exporter /home/prometheus/
 cp /opt/blibli/nodeexporter.service /etc/systemd/system
+cp /opt/blibli/nginxexporter.service /etc/systemd/system
+cp /opt/blibli/php-fpmexporter.service /etc/systemd/system
+chown -R prometheus:prometheus /home/prometheus/
 
 # Fixing the SSH to not use the DNS reverse lookup
 echo "Fixing the slow ssh login prompt"
@@ -114,8 +129,11 @@ cp -f /opt/blibli/etc-nginx-conf.d.mount /etc/systemd/system
 # Enable the GLusterd, httpd , node-exporter , mount service
 echo "Enable Web Server , App Server and node-exporter"
 systemctl enable nodeexporter
+systemctl enable nginxexporter
+systemctl enable php-fpmexporter
 systemctl enable nginx
 systemctl enable php-fpm
+systemctl enable restartNginx.service
 systemctl enable usr-share-nginx-html.mount
 systemctl enable etc-nginx-conf.d.mount
 
@@ -123,7 +141,10 @@ systemctl enable etc-nginx-conf.d.mount
 echo "Enabling the port 9100 , 80  on firewall"
 
 firewall-offline-cmd --port=9100:tcp
+firewall-offline-cmd --port=9113:tcp
+firewall-offline-cmd --port=9253:tcp
 firewall-offline-cmd --port=80:tcp
+firewall-offline-cmd --port=1337:tcp
 
 # Speed up the grub timeout 
 echo "SpeedingUp the grub timeout"
