Update kickstart configuration

--- a/config/VM1/ks.cfg
+++ b/config/VM1/ks.cfg
@@ -11,7 +11,7 @@ keyboard --vckeymap=us --xlayouts='us'
 lang en_US.UTF-8
 
 # Network information
-network  --hostname=localhost.localdomain
+network  --hostname=server1.localdomain
 
 # Root password
 rootpw --iscrypted $6$b/t5PbHQZywPEfpr$8s8CTsEhDjTWrAypN2HFRl.A65y9bihpmnIqymKaJDQXr.cWrIw6H.8TwNtW/ZEdc4DP0YyGdKsgd7QpI3toQ0
@@ -61,6 +61,11 @@ mkdir -p /mnt/sysimage/root/varnish
 mkdir -p /mnt/sysimage/opt/blibli
 mkdir -p /mnt/sysimage/root/expect
 mkdir -p /mnt/sysimage/root/mailla
+mkdir -p /mnt/sysimage/root/node_exporter
+mkdir -p /mnt/sysimage/root/varnish_exporter
+mkdir -p /mnt/sysimage/root/gluster_exporter
+mkdir -p /mnt/sysimage/root/mariadb_exporter
+
 # Mount and Copy package from iso to the folder has been create
 
 mount --bind /mnt/install/repo/Packages/dns /mnt/sysimage/root/dns
@@ -73,7 +78,10 @@ mount --bind /mnt/install/repo/Packages/varnish /mnt/sysimage/root/varnish
 mount --bind /mnt/install/repo/Packages/expect /mnt/sysimage/root/expect
 mount --bind /mnt/install/repo/Packages/mailla /mnt/sysimage/root/mailla
 cp -RTf /mnt/install/repo/Packages/blibli /mnt/sysimage/opt/blibli
-
+mount --bind /mnt/install/repo/Packages/node_exporter /mnt/sysimage/root/node_exporter
+mount --bind /mnt/install/repo/Packages/varnish_exporter /mnt/sysimage/root/varnish_exporter
+mount --bind /mnt/install/repo/Packages/gluster_exporter /mnt/sysimage/root/gluster_exporter
+mount --bind /mnt/install/repo/Packages/mariadb_exporter /mnt/sysimage/root/mariadb_exporter
 %end
 
 %post --log=/root/ks-post.log --interpreter=/bin/bash
@@ -96,6 +104,10 @@ firewall-offline-cmd --port=80:tcp
 firewall-offline-cmd --port=21:tcp
 firewall-offline-cmd --port=20:tcp
 firewall-offline-cmd --port=40000:tcp
+firewall-offline-cmd --port=9100:tcp
+firewall-offline-cmd --port=9131:tcp
+firewall-offline-cmd --port=9104:tcp
+firewall-offline-cmd --port=9189:tcp
 firewall-offline-cmd --port=53:udp
 
 # Fixing the SSH to not use the DNS reverse lookup
@@ -134,7 +146,6 @@ find /root/varnish -type f -name "*.rpm" -exec rpm -Uvh --nodeps {} +
 sed -i -e 's/6081/80/g' /usr/lib/systemd/system/varnish.service
 cp -f /opt/utils/default.vcl /etc/varnish/default.vcl
 
-
 # Installing expect package
 find /root/expect -type f -name "*.rpm" -exec rpm -ivh {} + 
 
@@ -160,13 +171,23 @@ chmod 755 /opt/blibli/gluster.sh
 chmod 755 /opt/blibli/mysqlSecure.sh
 chmod 755 /opt/blibli/createAdmin.sh
 
-
 # Installing some package to make send only postfix work
 find /root/mailla -type f -name "*.rpm" -exec rpm -Uvh {} +
 cp -f /opt/utils/main.cf /etc/postfix/
 mkdir -p /etc/postfix/sasl
 cp -f /opt/utils/sasl_passwd.db /etc/postfix/sasl/
 
+# Configuring exporter service
+mkdir /opt/prometheus/
+cp -R  /root/node_exporter /opt/prometheus/
+cp -R  /root/varnish_exporter /opt/prometheus/
+cp -R  /root/gluster_exporter /opt/prometheus/
+cp -R /root/mariadb_exporter /opt/prometheus/
+
+mv /opt/blibli/nodeexporter.service /etc/systemd/system
+mv /opt/blibli/varnishexporter.service /etc/systemd/system
+mv /opt/blibli/glusterexporter.service /etc/systemd/system
+mv /opt/blibli/mariadbexporter.service /etc/systemd/system
 
 # Enable the Nginx and DNS service
 echo "Enable lot of service"
@@ -182,6 +203,10 @@ systemctl enable home.mount
 systemctl enable opt-nginxconf.mount
 systemctl enable createAdmin
 systemctl enable mysqlSecure
+systemctl enable nodeexporter
+systemctl enable varnishexporter
+systemctl enable glusterexporter
+systemctl enable mariadbexporter
 
 # Speed up the grub timeout 
 echo "SpeedingUp the grub timeout"
@@ -198,7 +223,11 @@ umount /root/varnish
 umount /root/mariadb
 umount /root/expect
 umount /root/mailla
-rm -rf /root/dns  /opt/utils /root/semanage /root/glusterfs /root/vsftpd /root/varnish /root/mariadb /root/expect /root/mailla
+umount /root/mariadb_exporter
+umount /root/varnish_exporter
+umount /root/gluster_exporter
+umount /root/node_exporter
+rm -rf /root/dns  /opt/utils /root/semanage /root/glusterfs /root/vsftpd /root/varnish /root/mariadb /root/expect /root/mailla /root/*_exporter
 
 # Updating new configuration file
 echo "Updating new configuration file"
