Updating kickstart configuration

--- a/config/VM4/ks4.cfg
+++ b/config/VM4/ks4.cfg
@@ -51,6 +51,9 @@ net-tools
 %post --nochroot --log=/root/ks-post-nochroot.log --interpreter=/bin/bash
 cp -R /mnt/install/repo/Packages/blibli /mnt/sysimage/opt/blibli
 cp -R /mnt/install/repo/Packages/prometheus /mnt/sysimage/root/prometheus
+cp -R /mnt/install/repo/Packages/alertmanager /mnt/sysimage/root/prometheus
+mkdir /mnt/sysimage/root/grafana
+mount --bind /mnt/install/repo/Packages/grafana /mnt/sysimage/root/grafana
 %end
 
 %post --log=/root/ks-post.log --interpreter=/bin/bash
@@ -70,6 +73,11 @@ useradd -m -s /bin/bash prometheus
 mv /root/prometheus /home/prometheus/
 chown -R prometheus:prometheus /home/prometheus/
 cp /opt/blibli/prometheus.service /etc/systemd/system
+cp /opt/blibli/alertmanager.service /etc/systemd/system
+cp /opt/blibli/grafanaresetpassword.service /etc/systemd/system
+
+# Installing Grafana on Server
+find /root/grafana/ -type f -name "*.rpm" -exec rpm -Uvh {} +
 
 # Fixing the SSH to not use the DNS reverse lookup
 echo "Fixing the slow ssh login prompt"
@@ -77,10 +85,16 @@ echo "because of OpenSSH daemon uses DNS to run a reverse lookup on the client h
 echo "UseDNS no" >> /etc/ssh/sshd_config
 
 # Enable some services
-systemctl enable prometheus.service
+systemctl enable prometheus
+systemctl enable alertmanager
+systemctl enable grafana-server
+systemctl enable grafanaresetpassword
 
-# Enable some port
+# Enable some port for prometheus , alertmanager , and grafana
 firewall-offline-cmd --port=9090:tcp
+firewall-offline-cmd --port=9093:tcp
+firewall-offline-cmd --port=9094:tcp
+firewall-offline-cmd --port=3000:tcp
 
 # Speed up the grub timeout 
 echo "SpeedingUp the grub timeout"
@@ -93,6 +107,9 @@ grub2-mkconfig -o /boot/grub2/grub.cfg
 # Disable unecessary service
 echo "Disable unecessary service"
 systemctl disable sound.target
+
+# Unmount and removing grafana installation folder
+umount /root/grafana && rm -rf /root/grafana
 
 # Allright Good Luck :)
 echo "All is done Good Luck :)"
