--- a/config/VM2/ks2.cfg
+++ b/config/VM2/ks2.cfg
@@ -11,7 +11,7 @@ keyboard --vckeymap=us --xlayouts='us'
 lang en_US.UTF-8
 
 # Network information
-network  --hostname=server2.localdomain
+network  --hostname=server2
 
 # Root password
 rootpw --iscrypted $6$b/t5PbHQZywPEfpr$8s8CTsEhDjTWrAypN2HFRl.A65y9bihpmnIqymKaJDQXr.cWrIw6H.8TwNtW/ZEdc4DP0YyGdKsgd7QpI3toQ0
@@ -55,15 +55,17 @@ mkdir -p /mnt/sysimage/root/webnapp
 mkdir -p /mnt/sysimage/root/semanage
 mkdir -p /mnt/sysimage/opt/utils
 mkdir -p /mnt/sysimage/root/glusterfs
+mkdir -p /mnt/sysimage/root/php-fpm_exporter
+mkdir -p /mnt/sysimage/root/nginx_exporter
+mkdir -p /mnt/sysimage/root/node_exporter
+
 
 # Mount and Copy package from iso to the folder has been create
 mount --bind /mnt/install/repo/Packages/webnapp/ /mnt/sysimage/root/webnapp/
-cp -R /mnt/install/repo/Packages/node_exporter /mnt/sysimage/root/node_exporter
-cp -R /mnt/install/repo/Packages/nginx_exporter /mnt/sysimage/root/nginx_exporter
-cp -R /mnt/install/repo/Packages/php-fpm_exporter /mnt/sysimage/root/php-fpm_exporter
-cp -R /mnt/install/repo/Packages/mysqld_exporter /mnt/sysimage/root/mysqld_exporter
+mount --bind /mnt/install/repo/Packages/node_exporter /mnt/sysimage/root/node_exporter
+mount --bind /mnt/install/repo/Packages/nginx_exporter /mnt/sysimage/root/nginx_exporter
+mount --bind /mnt/install/repo/Packages/php-fpm_exporter /mnt/sysimage/root/php-fpm_exporter
 cp -R /mnt/install/repo/Packages/blibli /mnt/sysimage/opt/blibli
-
 
 mount --bind /mnt/install/repo/Packages/semanage /mnt/sysimage/root/semanage
 mount --bind /mnt/install/repo/Packages/utils /mnt/sysimage/opt/utils
@@ -94,7 +96,7 @@ find /root/webnapp/ -type f -name "*.rpm" -exec rpm -Uvh  --nodeps {} +
 #Configuring Web n App server
 cp -f /opt/utils/nginx.conf /etc/nginx/nginx.conf
 cp -f /opt/utils/www.conf /etc/php-fpm.d/
-cp -f /opt/utils/nginx.service /usr/systemd/system/
+cp -f /opt/utils/nginx.service /usr/lib/systemd/system/
 
 # Configurin SELinux context with compiled module for nginx
 semodule -i /opt/utils/nginx.pp
@@ -106,9 +108,9 @@ cp -f /opt/blibli/restartNginx.service /etc/systemd/system
 
 # Create User prometheus
 useradd -m -s /bin/bash prometheus
-mv /root/node_exporter /home/prometheus/
-mv /root/nginx_exporter /home/prometheus/
-mv /root/php-fpm_exporter /home/prometheus/
+cp -R /root/node_exporter /home/prometheus/
+cp -R  /root/nginx_exporter /home/prometheus/
+cp -R  /root/php-fpm_exporter /home/prometheus/
 cp /opt/blibli/nodeexporter.service /etc/systemd/system
 cp /opt/blibli/nginxexporter.service /etc/systemd/system
 cp /opt/blibli/php-fpmexporter.service /etc/systemd/system
@@ -155,7 +157,8 @@ echo "umount directory and delete it !"
 umount /root/webnapp
 umount /root/semanage
 umount /opt/utils
-rm -rf /root/webnapp /opt/blibli /root/semanage /opt/utils
+umount /root/*_exporter
+rm -rf /root/webnapp /opt/blibli /root/semanage /opt/utils /root/*_exporter
 
 # Updating new configuration file
 echo "Updating new configuration file"
