Update some file

--- a/config/VM1/ks.cfg
+++ b/config/VM1/ks.cfg
@@ -11,7 +11,7 @@ keyboard --vckeymap=us --xlayouts='us'
 lang en_US.UTF-8
 
 # Network information
-network  --hostname=server1.localdomain
+network  --hostname=server1
 
 # Root password
 rootpw --iscrypted $6$b/t5PbHQZywPEfpr$8s8CTsEhDjTWrAypN2HFRl.A65y9bihpmnIqymKaJDQXr.cWrIw6H.8TwNtW/ZEdc4DP0YyGdKsgd7QpI3toQ0
@@ -65,7 +65,10 @@ mkdir -p /mnt/sysimage/root/node_exporter
 mkdir -p /mnt/sysimage/root/varnish_exporter
 mkdir -p /mnt/sysimage/root/gluster_exporter
 mkdir -p /mnt/sysimage/root/mariadb_exporter
-
+mkdir -p /mnt/sysimage/root/bind_exporter
+mkdir -p /mnt/sysimage/root/postfix_exporter
+mkdir -p /mnt/sysimage/root/python-pip
+mkdir -p /mnt/sysimage/root/flask
 # Mount and Copy package from iso to the folder has been create
 
 mount --bind /mnt/install/repo/Packages/dns /mnt/sysimage/root/dns
@@ -82,6 +85,10 @@ mount --bind /mnt/install/repo/Packages/node_exporter /mnt/sysimage/root/node_ex
 mount --bind /mnt/install/repo/Packages/varnish_exporter /mnt/sysimage/root/varnish_exporter
 mount --bind /mnt/install/repo/Packages/gluster_exporter /mnt/sysimage/root/gluster_exporter
 mount --bind /mnt/install/repo/Packages/mariadb_exporter /mnt/sysimage/root/mariadb_exporter
+mount --bind /mnt/install/repo/Packages/bind_exporter /mnt/sysimage/root/bind_exporter
+mount --bind /mnt/install/repo/Packages/postfix_exporter /mnt/sysimage/root/postfix_exporter
+mount --bind /mnt/install/repo/Packages/python-pip /mnt/sysimage/root/python-pip
+mount --bind /mnt/install/repo/Packages/flask /mnt/sysimage/root/flask
 %end
 
 %post --log=/root/ks-post.log --interpreter=/bin/bash
@@ -98,8 +105,8 @@ echo  "The Interface Has Been Configured . . ."
 # Disable Dhclient to update resolv.conf
 chattr +i /etc/resolv.conf
 
-# Enabling the port 53,80
-echo "Enabling the port 53,80,3306 on firewall"
+# Enabling the port so much port for our services :)
+echo "Enabling the port so much port for our services :)"
 firewall-offline-cmd --port=80:tcp
 firewall-offline-cmd --port=21:tcp
 firewall-offline-cmd --port=20:tcp
@@ -108,7 +115,11 @@ firewall-offline-cmd --port=9100:tcp
 firewall-offline-cmd --port=9131:tcp
 firewall-offline-cmd --port=9104:tcp
 firewall-offline-cmd --port=9189:tcp
+firewall-offline-cmd --port=9153:tcp
+firewall-offline-cmd --port=9119:tcp
+firewall-offline-cmd --port=9154:tcp
 firewall-offline-cmd --port=53:udp
+firewall-offline-cmd --port=5000:tcp
 
 # Fixing the SSH to not use the DNS reverse lookup
 echo "Fixing the slow ssh login prompt"
@@ -128,7 +139,11 @@ cp -f /opt/utils/db.* /var/named/data/
 chown named:named /var/named/data/db.*
 semanage fcontext -a -t named_zone_t /var/named/data/db.ku
 semanage fcontext -a -t named_zone_t /var/named/data/db.220.168.192
-setsebool -P named_write_master_zones=1
+setsebool -P named_write_master_zones=1 
+semanage port -a -t dns_port_t -p tcp 8053 # Buat exporter
+
+# Installing ftp server
+find /root/vsftpd -type f -name "*.rpm" -exec rpm -Uvh {} +
 
 # Installing GlusterFS and configuring firewall 
 find /root/glusterfs/ -type f -name "*.rpm" -exec rpm -Uvh {} +
@@ -136,9 +151,6 @@ firewall-offline-cmd --add-service=glusterfs
 
 #Installing MariaDB
 find /root/mariadb/ -type f -name "*.rpm" -exec rpm -Uvh {} + 
-
-# Installing ftp server
-find /root/vsftpd -type f -name "*.rpm" -exec rpm -Uvh {} +
 
 # Installing Varnish cache server 
 find /root/varnish -type f -name "*.rpm" -exec rpm -Uvh --nodeps {} + 
@@ -156,14 +168,17 @@ cp -f /opt/blibli/createAdmin.service /etc/systemd/system/
 cp -f /opt/blibli/mysqlSecure.service /etc/systemd/system/
 
 # Configuring VSftpd
-touch /etc/vsftpd.userlist
+touch /etc/vsftpd/ftpd.passwd
+mkdir /etc/vsftpd/vsftpd_user_conf
 cp -f /opt/utils/vsftpd.conf /etc/vsftpd/vsftpd.conf
+cp -f /opt/utils/vsftpd /etc/pam.d/vsftpd
 mkdir /opt/nginxconf
 semanage boolean -m ftpd_full_access --on
 
 # Create Script Folder
 mkdir /opt/script/
 cp -RTf /opt/utils/script/ /opt/script/
+mv /opt/script/api /opt/
 chmod 755 /opt/script/*.sh
 
 # Give executeable permission to script needed by custom service
@@ -177,21 +192,23 @@ cp -f /opt/utils/main.cf /etc/postfix/
 mkdir -p /etc/postfix/sasl
 cp -f /opt/utils/sasl_passwd.db /etc/postfix/sasl/
 
+# Installing python pip and flask to run api
+find /root/python-pip -type f -name "*.rpm" -exec rpm -Uvh {} + 
+find /root/flask -type f -name "*.whl" -exec pip install {} +
+
 # Configuring exporter service
 mkdir /opt/prometheus/
-cp -R  /root/node_exporter /opt/prometheus/
-cp -R  /root/varnish_exporter /opt/prometheus/
-cp -R  /root/gluster_exporter /opt/prometheus/
-cp -R /root/mariadb_exporter /opt/prometheus/
-
+cp -R /root/*_exporter /opt/prometheus/
 mv /opt/blibli/nodeexporter.service /etc/systemd/system
 mv /opt/blibli/varnishexporter.service /etc/systemd/system
 mv /opt/blibli/glusterexporter.service /etc/systemd/system
 mv /opt/blibli/mariadbexporter.service /etc/systemd/system
+mv /opt/blibli/bindexporter.service /etc/systemd/system
+mv /opt/blibli/postfixexporter.service /etc/systemd/system
+mv /opt/blibli/webservice.service /etc/systemd/system
 
 # Enable the Nginx and DNS service
 echo "Enable lot of service"
-#systemctl enable nginx
 systemctl enable named
 systemctl enable vsftpd
 systemctl enable glusterd
@@ -207,6 +224,9 @@ systemctl enable nodeexporter
 systemctl enable varnishexporter
 systemctl enable glusterexporter
 systemctl enable mariadbexporter
+systemctl enable bindexporter
+systemctl enable postfixexporter
+systemctl enable webservice
 
 # Speed up the grub timeout 
 echo "SpeedingUp the grub timeout"
@@ -227,7 +247,11 @@ umount /root/mariadb_exporter
 umount /root/varnish_exporter
 umount /root/gluster_exporter
 umount /root/node_exporter
-rm -rf /root/dns  /opt/utils /root/semanage /root/glusterfs /root/vsftpd /root/varnish /root/mariadb /root/expect /root/mailla /root/*_exporter
+umount /root/bind_exporter
+umount /root/postfix_exporter
+umount /root/python-pip
+umount /root/flask
+rm -rf /root/python-pip /root/flask /root/dns /opt/utils /root/semanage /root/glusterfs /root/vsftpd /root/varnish /root/mariadb /root/expect /root/mailla /root/*_exporter
 
 # Updating new configuration file
 echo "Updating new configuration file"
