--- a/config/VM1/vsftpd.conf
+++ b/config/VM1/vsftpd.conf
@@ -40,7 +40,7 @@ dirmessage_enable=YES
 xferlog_enable=YES
 #
 # Make sure PORT transfer connections originate from port 20 (ftp-data).
-connect_from_port_20=YES
+
 #
 # If you want, you can arrange for uploaded anonymous files to be owned by
 # a different user. Note! Using "root" for uploaded files is not
@@ -98,7 +98,7 @@ xferlog_std_format=YES
 # (Warning! chroot'ing can be very dangerous. If using chroot, make sure that
 # the user does not have write access to the top level directory within the
 # chroot)
-#chroot_local_user=YES
+chroot_local_user=YES
 #chroot_list_enable=YES
 # (default follows)
 #chroot_list_file=/etc/vsftpd/chroot_list
@@ -112,7 +112,7 @@ xferlog_std_format=YES
 # When "listen" directive is enabled, vsftpd runs in standalone mode and
 # listens on IPv4 sockets. This directive cannot be used in conjunction
 # with the listen_ipv6 directive.
-listen=NO
+listen=YES
 #
 # This directive enables listening on IPv6 sockets. By default, listening
 # on the IPv6 "any" address (::) will accept connections from both IPv6
@@ -121,18 +121,16 @@ listen=NO
 # addresses) then you must run two copies of vsftpd with two configuration
 # files.
 # Make sure, that one of the listen options is commented !!
-listen_ipv6=YES
-
-pam_service_name=vsftpd
-userlist_enable=YES
-tcp_wrappers=YES
-userlist_enable=YES
-userlist_file=/etc/vsftpd.userlist
-userlist_deny=NO
-chroot_local_user=YES
 allow_writeable_chroot=YES
-user_sub_token=$USER
-local_root=/home/$USER/
-pasv_enable=YES
+hide_ids=YES
+
+#virutal user settings
+user_config_dir=/etc/vsftpd/vsftpd_user_conf
+guest_enable=YES
+virtual_use_local_privs=YES
+pam_service_name=vsftpd
+nopriv_user=vsftpd
+guest_username=vsftpd
+pasv_enable=yes
 pasv_max_port=40000
 pasv_min_port=40000
