Update some file

--- a/config/VM2/ks2.cfg
+++ b/config/VM2/ks2.cfg
@@ -130,7 +130,7 @@ cp -f /opt/blibli/etc-nginx-conf.d.mount /etc/systemd/system
 
 # Enable the GLusterd, httpd , node-exporter , mount service
 echo "Enable Web Server , App Server and node-exporter"
-systemctl enable nodeexporter
+systemctl enable nodeexporter2
 systemctl enable nginxexporter
 systemctl enable php-fpmexporter
 systemctl enable nginx
